[gd_scene load_steps=38 format=3 uid="uid://chkd7lgphi0cv"]

[ext_resource type="Script" path="res://Scripts/GUI/options_ui.gd" id="1_vdxw5"]
[ext_resource type="Texture2D" uid="uid://dtb46jiyiaq7x" path="res://Assets/UI/Main Menu/MainMenu-Background.png" id="2_cgt6h"]
[ext_resource type="Texture2D" uid="uid://c1lero7mqpehw" path="res://Assets/UI/Main Menu/MainMenu-Background2.png" id="2_osyww"]
[ext_resource type="Texture2D" uid="uid://xbdpv5tq53wy" path="res://Assets/UI/Main Menu/JustinWakeUp1.png" id="3_ggylj"]
[ext_resource type="Texture2D" uid="uid://crjj4urth2qui" path="res://Assets/UI/Main Menu/MainMenu-Background3.png" id="3_gxwhw"]
[ext_resource type="Texture2D" uid="uid://do4b344v101df" path="res://Assets/UI/Pause Menu/PauseMenu-Frame.png" id="3_wu6cc"]
[ext_resource type="Texture2D" uid="uid://bokoncrgkgqoa" path="res://Assets/UI/Main Menu/JustinWakeUp2.png" id="4_d2bxy"]
[ext_resource type="Texture2D" uid="uid://x0nqrnp0nvg" path="res://Assets/UI/Main Menu/MainMenu-Background4.png" id="4_hrum1"]
[ext_resource type="Texture2D" uid="uid://bcto0rc11pe6w" path="res://Assets/UI/Main Menu/JustinWakeUp3.png" id="5_rw7gn"]
[ext_resource type="Script" path="res://Scripts/GUI/mainmenubackground.gd" id="6_mtjgs"]
[ext_resource type="Texture2D" uid="uid://clbghl57u176j" path="res://Assets/UI/Main Menu/JustinWakeUp4.png" id="6_sddwn"]
[ext_resource type="Texture2D" uid="uid://dtmy1a54gfo6k" path="res://Assets/UI/Main Menu/JustinSleeping2.png" id="7_iqv2y"]
[ext_resource type="Texture2D" uid="uid://wphwi8r5lcve" path="res://Assets/UI/Main Menu/JustinSleeping3.png" id="8_8htpq"]
[ext_resource type="Texture2D" uid="uid://beslwhfuysc7l" path="res://Assets/UI/Main Menu/JustinSleeping4.png" id="9_v061i"]
[ext_resource type="Texture2D" uid="uid://b41515u70snph" path="res://Assets/UI/Empty Buttons/Button-Empty.png" id="15_evgs7"]
[ext_resource type="Texture2D" uid="uid://dlisuewnoi6s4" path="res://Assets/UI/Empty Buttons/Button-Empty-Pressed.png" id="16_ayjmq"]
[ext_resource type="Texture2D" uid="uid://bqtov3bjn6o2a" path="res://Assets/UI/Empty Buttons/Button-Empty-Highlighted.png" id="17_8ecwu"]
[ext_resource type="FontFile" uid="uid://bg1oq07gebwu4" path="res://Assets/UI/Fonts/pixeloid-font/PixeloidSansBold-PKnYd.ttf" id="24_vmuug"]
[ext_resource type="Script" path="res://Scripts/GUI/MasterVolumeSlider.gd" id="31_34lla"]
[ext_resource type="Script" path="res://Scripts/GUI/SoundVolumeSlider.gd" id="32_oypkq"]
[ext_resource type="Script" path="res://Scripts/GUI/MusicVolumeSlider.gd" id="33_olgn3"]
[ext_resource type="Script" path="res://Scripts/GUI/AmbienceVolumeSlider.gd" id="34_itoog"]

[sub_resource type="SpriteFrames" id="SpriteFrames_1eedu"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_osyww")
}, {
"duration": 1.0,
"texture": ExtResource("3_gxwhw")
}, {
"duration": 1.0,
"texture": ExtResource("4_hrum1")
}, {
"duration": 1.0,
"texture": ExtResource("2_cgt6h")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_ia0m5"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_ggylj")
}, {
"duration": 10.0,
"texture": ExtResource("4_d2bxy")
}, {
"duration": 1.0,
"texture": ExtResource("5_rw7gn")
}, {
"duration": 1.0,
"texture": ExtResource("6_sddwn")
}],
"loop": true,
"name": &"awake",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("7_iqv2y")
}, {
"duration": 1.0,
"texture": ExtResource("8_8htpq")
}, {
"duration": 1.0,
"texture": ExtResource("9_v061i")
}],
"loop": true,
"name": &"sleep",
"speed": 5.0
}]

[sub_resource type="BitMap" id="BitMap_ptb6h"]

[sub_resource type="LabelSettings" id="LabelSettings_gsrir"]
font = ExtResource("24_vmuug")
font_size = 60
font_color = Color(0.960784, 1, 0.909804, 1)

[sub_resource type="LabelSettings" id="LabelSettings_dqo6c"]
font = ExtResource("24_vmuug")

[sub_resource type="LabelSettings" id="LabelSettings_bk4cn"]
font = ExtResource("24_vmuug")

[sub_resource type="LabelSettings" id="LabelSettings_fqk4y"]
font = ExtResource("24_vmuug")
font_size = 60
font_color = Color(0.960784, 1, 0.909804, 1)

[sub_resource type="LabelSettings" id="LabelSettings_nqakr"]
font = ExtResource("24_vmuug")
font_size = 60
font_color = Color(0.960784, 1, 0.909804, 1)

[sub_resource type="LabelSettings" id="LabelSettings_2ghjk"]
font = ExtResource("24_vmuug")
font_size = 60
font_color = Color(0.960784, 1, 0.909804, 1)

[sub_resource type="LabelSettings" id="LabelSettings_s517g"]
font = ExtResource("24_vmuug")

[sub_resource type="LabelSettings" id="LabelSettings_c8a6j"]
font = ExtResource("24_vmuug")

[sub_resource type="LabelSettings" id="LabelSettings_p1syv"]
font = ExtResource("24_vmuug")

[sub_resource type="LabelSettings" id="LabelSettings_dq0p6"]
font = ExtResource("24_vmuug")

[sub_resource type="Theme" id="Theme_bvuy7"]
default_font = ExtResource("24_vmuug")

[sub_resource type="Theme" id="Theme_fos5k"]
default_font = ExtResource("24_vmuug")

[node name="OptionsUI" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_vdxw5")

[node name="BackgroundImage2" type="AnimatedSprite2D" parent="."]
visible = false
texture_filter = 1
scale = Vector2(12, 12)
sprite_frames = SubResource("SpriteFrames_1eedu")
autoplay = "default"
centered = false
script = ExtResource("6_mtjgs")

[node name="Justin" type="AnimatedSprite2D" parent="BackgroundImage2"]
visible = false
position = Vector2(12.5, 55.75)
sprite_frames = SubResource("SpriteFrames_ia0m5")
animation = &"awake"
autoplay = "sleep"
centered = false

[node name="TextureButton" type="TextureButton" parent="BackgroundImage2"]
visible = false
modulate = Color(1, 1, 1, 0)
offset_left = 12.4167
offset_top = 55.5
offset_right = 39.4167
offset_bottom = 86.5
focus_neighbor_right = NodePath("../../Panel/ButtonContainer/GeneralButton")
texture_normal = ExtResource("4_d2bxy")
texture_click_mask = SubResource("BitMap_ptb6h")

[node name="Panel" type="Panel" parent="."]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 934.0
offset_top = 519.0
offset_right = 974.0
offset_bottom = 559.0
grow_horizontal = 0
grow_vertical = 0

[node name="TextureRect" type="TextureRect" parent="Panel"]
texture_filter = 1
layout_mode = 0
offset_left = -453.0
offset_top = -343.0
offset_right = -293.0
offset_bottom = -253.0
scale = Vector2(11, 11)
texture = ExtResource("3_wu6cc")

[node name="ButtonContainer" type="HBoxContainer" parent="Panel"]
texture_filter = 1
layout_mode = 0
offset_left = 164.0
offset_top = -108.0
offset_right = 295.0
offset_bottom = -97.0
scale = Vector2(4, 4)

[node name="GeneralButton" type="TextureButton" parent="Panel/ButtonContainer"]
layout_mode = 2
focus_neighbor_left = NodePath("../../../BackButton")
focus_neighbor_top = NodePath("../../../BackButton")
focus_neighbor_right = NodePath("../AudioButton")
focus_next = NodePath("../AudioButton")
focus_previous = NodePath("../../../BackButton")
texture_normal = ExtResource("15_evgs7")
texture_pressed = ExtResource("16_ayjmq")
texture_hover = ExtResource("17_8ecwu")
texture_focused = ExtResource("17_8ecwu")

[node name="General" type="Label" parent="Panel/ButtonContainer/GeneralButton"]
layout_mode = 0
offset_left = 6.0
offset_top = 2.25
offset_right = 341.0
offset_bottom = 85.25
scale = Vector2(0.09, 0.09)
text = "GENERAL"
label_settings = SubResource("LabelSettings_gsrir")

[node name="AudioButton" type="TextureButton" parent="Panel/ButtonContainer"]
layout_mode = 2
focus_neighbor_left = NodePath("../GeneralButton")
focus_neighbor_top = NodePath("../../../BackButton")
focus_neighbor_right = NodePath("../ControlsButton")
focus_next = NodePath("../ControlsButton")
focus_previous = NodePath("../GeneralButton")
texture_normal = ExtResource("15_evgs7")
texture_pressed = ExtResource("16_ayjmq")
texture_hover = ExtResource("17_8ecwu")
texture_focused = ExtResource("17_8ecwu")

[node name="Audio" type="Label" parent="Panel/ButtonContainer/AudioButton"]
layout_mode = 0
offset_left = 11.0
offset_top = 2.0
offset_right = 232.0
offset_bottom = 85.0
scale = Vector2(0.09, 0.09)
text = "AUDIO"
label_settings = SubResource("LabelSettings_gsrir")

[node name="ControlsButton" type="TextureButton" parent="Panel/ButtonContainer"]
layout_mode = 2
focus_neighbor_left = NodePath("../AudioButton")
focus_neighbor_top = NodePath("../../../BackButton")
focus_neighbor_right = NodePath("../../../BackButton")
focus_next = NodePath("../GeneralButton")
focus_previous = NodePath("../AudioButton")
texture_normal = ExtResource("15_evgs7")
texture_pressed = ExtResource("16_ayjmq")
texture_hover = ExtResource("17_8ecwu")
texture_focused = ExtResource("17_8ecwu")

[node name="Controls" type="Label" parent="Panel/ButtonContainer/ControlsButton"]
layout_mode = 0
offset_left = 3.5
offset_top = 2.25
offset_right = 385.5
offset_bottom = 85.25
scale = Vector2(0.09, 0.09)
text = "CONTROLS"
label_settings = SubResource("LabelSettings_gsrir")

[node name="Fullscreen" type="Label" parent="Panel"]
texture_filter = 1
layout_mode = 2
offset_left = 164.0
offset_top = -37.0
offset_right = 278.0
offset_bottom = -11.0
scale = Vector2(1.25, 1.25)
text = "Fullscreen:"
label_settings = SubResource("LabelSettings_dqo6c")

[node name="Windowed" type="Label" parent="Panel"]
texture_filter = 1
layout_mode = 2
offset_left = 164.0
offset_top = 25.0
offset_right = 248.0
offset_bottom = 51.0
scale = Vector2(1.25, 1.25)
text = "Window:"
label_settings = SubResource("LabelSettings_bk4cn")

[node name="Difficulty" type="Label" parent="Panel"]
texture_filter = 1
layout_mode = 0
offset_left = 372.0
offset_top = 80.0
offset_right = 465.0
offset_bottom = 106.0
scale = Vector2(1.25, 1.25)
text = "Difficulty"
label_settings = SubResource("LabelSettings_bk4cn")

[node name="ButtonContainer1" type="HBoxContainer" parent="Panel"]
texture_filter = 1
layout_mode = 0
offset_left = 164.0
offset_top = 120.0
offset_right = 296.0
offset_bottom = 131.0
scale = Vector2(4, 4)

[node name="EasyModeButton" type="TextureButton" parent="Panel/ButtonContainer1"]
layout_mode = 2
focus_neighbor_left = NodePath(".")
focus_neighbor_top = NodePath("../../General/HBoxContainer2/BorderlessButton")
focus_neighbor_right = NodePath("../NormalModeButton")
focus_neighbor_bottom = NodePath("../../../BackButton")
focus_next = NodePath("../NormalModeButton")
focus_previous = NodePath(".")
texture_normal = ExtResource("15_evgs7")
texture_pressed = ExtResource("16_ayjmq")
texture_hover = ExtResource("17_8ecwu")
texture_focused = ExtResource("17_8ecwu")

[node name="Easy" type="Label" parent="Panel/ButtonContainer1/EasyModeButton"]
layout_mode = 0
offset_left = 14.25
offset_top = 2.75
offset_right = 218.25
offset_bottom = 85.75
scale = Vector2(0.07, 0.07)
text = "EASY"
label_settings = SubResource("LabelSettings_fqk4y")

[node name="NormalModeButton" type="TextureButton" parent="Panel/ButtonContainer1"]
layout_mode = 2
focus_neighbor_left = NodePath("../EasyModeButton")
focus_neighbor_top = NodePath("../../General/HBoxContainer2/BorderlessButton")
focus_neighbor_right = NodePath("../HardModeButton")
focus_next = NodePath("../HardModeButton")
focus_previous = NodePath("../EasyModeButton")
texture_normal = ExtResource("15_evgs7")
texture_pressed = ExtResource("16_ayjmq")
texture_hover = ExtResource("17_8ecwu")
texture_focused = ExtResource("17_8ecwu")

[node name="Normal" type="Label" parent="Panel/ButtonContainer1/NormalModeButton"]
layout_mode = 0
offset_left = 11.25
offset_top = 3.25
offset_right = 312.25
offset_bottom = 86.25
scale = Vector2(0.07, 0.07)
text = "NORMAL"
label_settings = SubResource("LabelSettings_nqakr")

[node name="HardModeButton" type="TextureButton" parent="Panel/ButtonContainer1"]
layout_mode = 2
focus_neighbor_left = NodePath("../NormalModeButton")
focus_neighbor_top = NodePath("../../General/HBoxContainer2/BorderlessButton")
focus_neighbor_right = NodePath(".")
focus_neighbor_bottom = NodePath("../../../BackButton")
focus_next = NodePath(".")
focus_previous = NodePath("../NormalModeButton")
texture_normal = ExtResource("15_evgs7")
texture_pressed = ExtResource("16_ayjmq")
texture_hover = ExtResource("17_8ecwu")
texture_focused = ExtResource("17_8ecwu")

[node name="Hard" type="Label" parent="Panel/ButtonContainer1/HardModeButton"]
layout_mode = 0
offset_left = 14.0
offset_top = 3.0
offset_right = 218.0
offset_bottom = 86.0
scale = Vector2(0.07, 0.07)
text = "HARD"
label_settings = SubResource("LabelSettings_2ghjk")

[node name="General" type="VBoxContainer" parent="Panel"]
layout_mode = 1
offset_left = 335.0
offset_top = -46.0
offset_right = 383.0
offset_bottom = -20.0
scale = Vector2(4, 4)

[node name="HBoxContainer1" type="HBoxContainer" parent="Panel/General"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="FullscreenButton" type="TextureButton" parent="Panel/General/HBoxContainer1"]
texture_filter = 1
layout_mode = 2
size_flags_horizontal = 4
focus_neighbor_top = NodePath("../../../ButtonContainer/GeneralButton")
focus_neighbor_bottom = NodePath("../../HBoxContainer2/BorderlessButton")
texture_normal = ExtResource("15_evgs7")
texture_pressed = ExtResource("16_ayjmq")
texture_hover = ExtResource("17_8ecwu")
texture_focused = ExtResource("17_8ecwu")

[node name="Fullscreen" type="Label" parent="Panel/General/HBoxContainer1/FullscreenButton"]
layout_mode = 0
offset_left = 3.75
offset_top = 2.5
offset_right = 479.75
offset_bottom = 85.5
scale = Vector2(0.07, 0.07)
text = "FULLSCREEN"
label_settings = SubResource("LabelSettings_gsrir")

[node name="HBoxContainer2" type="HBoxContainer" parent="Panel/General"]
layout_mode = 2
theme_override_constants/separation = 2

[node name="BorderlessButton" type="TextureButton" parent="Panel/General/HBoxContainer2"]
texture_filter = 1
layout_mode = 2
focus_neighbor_left = NodePath(".")
focus_neighbor_top = NodePath("../../HBoxContainer1/FullscreenButton")
focus_neighbor_right = NodePath(".")
focus_next = NodePath("../../../ButtonContainer1/NormalModeButton")
focus_previous = NodePath("../../HBoxContainer1/FullscreenButton")
texture_normal = ExtResource("15_evgs7")
texture_pressed = ExtResource("16_ayjmq")
texture_hover = ExtResource("17_8ecwu")
texture_focused = ExtResource("17_8ecwu")

[node name="Windowed" type="Label" parent="Panel/General/HBoxContainer2/BorderlessButton"]
layout_mode = 0
offset_left = 7.5
offset_top = 3.0
offset_right = 401.5
offset_bottom = 86.0
scale = Vector2(0.07, 0.07)
text = "WINDOWED"
label_settings = SubResource("LabelSettings_gsrir")

[node name="Master Volume" type="Label" parent="Panel"]
visible = false
layout_mode = 0
offset_left = 164.0
offset_top = -37.0
offset_right = 321.0
offset_bottom = -11.0
scale = Vector2(1.2, 1.2)
text = "Master Volume:"
label_settings = SubResource("LabelSettings_s517g")

[node name="Sound Volume" type="Label" parent="Panel"]
visible = false
layout_mode = 0
offset_left = 164.0
offset_top = 1.0
offset_right = 310.0
offset_bottom = 27.0
scale = Vector2(1.2, 1.2)
text = "Sound Volume:"
label_settings = SubResource("LabelSettings_c8a6j")

[node name="Music Volume" type="Label" parent="Panel"]
visible = false
layout_mode = 0
offset_left = 164.0
offset_top = 38.0
offset_right = 307.0
offset_bottom = 64.0
scale = Vector2(1.2, 1.2)
text = "Music Volume:"
label_settings = SubResource("LabelSettings_p1syv")

[node name="Ambience Volume" type="Label" parent="Panel"]
visible = false
layout_mode = 0
offset_left = 164.0
offset_top = 75.0
offset_right = 344.0
offset_bottom = 101.0
scale = Vector2(1.2, 1.2)
text = "Ambience Volume:"
label_settings = SubResource("LabelSettings_p1syv")

[node name="Audio" type="VBoxContainer" parent="Panel"]
visible = false
layout_mode = 1
offset_left = 372.5
offset_top = -33.0
offset_right = 712.5
offset_bottom = 97.0
theme_override_constants/separation = 22

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/Audio"]
layout_mode = 2

[node name="CenterContainer" type="CenterContainer" parent="Panel/Audio/HBoxContainer"]
custom_minimum_size = Vector2(340, 0)
layout_mode = 2

[node name="HSlider" type="HSlider" parent="Panel/Audio/HBoxContainer/CenterContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
focus_neighbor_top = NodePath("../../../../ButtonContainer/AudioButton")
focus_neighbor_bottom = NodePath("../../../HBoxContainer1/CenterContainer/HSlider")
max_value = 1.0
step = 0.001
script = ExtResource("31_34lla")
bus_name = "Master"

[node name="HBoxContainer1" type="HBoxContainer" parent="Panel/Audio"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="CenterContainer" type="CenterContainer" parent="Panel/Audio/HBoxContainer1"]
custom_minimum_size = Vector2(340, 0)
layout_mode = 2

[node name="HSlider" type="HSlider" parent="Panel/Audio/HBoxContainer1/CenterContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
focus_neighbor_top = NodePath("../../../HBoxContainer/CenterContainer/HSlider")
focus_neighbor_bottom = NodePath("../../../HBoxContainer2/CenterContainer/HSlider")
max_value = 1.0
step = 0.001
script = ExtResource("32_oypkq")
bus_name = "SFX"

[node name="HBoxContainer2" type="HBoxContainer" parent="Panel/Audio"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="CenterContainer" type="CenterContainer" parent="Panel/Audio/HBoxContainer2"]
custom_minimum_size = Vector2(340, 0)
layout_mode = 2

[node name="HSlider" type="HSlider" parent="Panel/Audio/HBoxContainer2/CenterContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
focus_neighbor_top = NodePath("../../../HBoxContainer1/CenterContainer/HSlider")
focus_neighbor_bottom = NodePath("../../../HBoxContainer3/CenterContainer/HSlider")
max_value = 1.0
step = 0.001
script = ExtResource("33_olgn3")
bus_name = "Music"

[node name="HBoxContainer3" type="HBoxContainer" parent="Panel/Audio"]
layout_mode = 2

[node name="CenterContainer" type="CenterContainer" parent="Panel/Audio/HBoxContainer3"]
custom_minimum_size = Vector2(340, 0)
layout_mode = 2

[node name="HSlider" type="HSlider" parent="Panel/Audio/HBoxContainer3/CenterContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
focus_neighbor_top = NodePath("../../../HBoxContainer2/CenterContainer/HSlider")
focus_neighbor_bottom = NodePath("../../../../../BackButton")
max_value = 1.0
step = 0.001
script = ExtResource("34_itoog")
bus_name = "Ambience"

[node name="Action" type="Label" parent="Panel"]
visible = false
layout_mode = 0
offset_left = 164.0
offset_top = -37.0
offset_right = 228.0
offset_bottom = -11.0
scale = Vector2(1.3, 1.3)
text = "Action"
label_settings = SubResource("LabelSettings_dq0p6")

[node name="Keyboard" type="Label" parent="Panel"]
visible = false
layout_mode = 0
offset_left = 353.0
offset_top = -37.0
offset_right = 451.0
offset_bottom = -11.0
scale = Vector2(1.3, 1.3)
theme = SubResource("Theme_bvuy7")
text = "Keyboard"

[node name="Controller" type="Label" parent="Panel"]
visible = false
layout_mode = 0
offset_left = 552.0
offset_top = -37.0
offset_right = 656.0
offset_bottom = -11.0
scale = Vector2(1.3, 1.3)
theme = SubResource("Theme_fos5k")
text = "Controller"

[node name="Panel2" type="Panel" parent="."]
visible = false
self_modulate = Color(1, 1, 1, 0)
texture_filter = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 1267.0
offset_top = 600.0
offset_right = 1307.0
offset_bottom = 640.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="Panel2"]
layout_mode = 0
offset_left = -386.0
offset_top = -200.0
offset_right = -226.0
offset_bottom = -110.0
scale = Vector2(6, 6)
texture = ExtResource("3_wu6cc")

[node name="Label" type="Label" parent="Panel2"]
texture_filter = 1
layout_mode = 0
offset_left = -28.0
offset_top = 22.0
offset_right = 77.0
offset_bottom = 48.0
scale = Vector2(2.5, 2.5)
text = "Press any key"

[node name="Panel3" type="Panel" parent="."]
visible = false
self_modulate = Color(1, 1, 1, 0)
texture_filter = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 1267.0
offset_top = 600.0
offset_right = 1267.0
offset_bottom = 600.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="Panel3"]
layout_mode = 0
offset_left = -386.0
offset_top = -200.0
offset_right = -226.0
offset_bottom = -110.0
scale = Vector2(6, 6)
texture = ExtResource("3_wu6cc")

[node name="Label" type="Label" parent="Panel3"]
texture_filter = 1
layout_mode = 0
offset_left = -41.0
offset_top = 17.0
offset_right = 136.0
offset_bottom = 69.0
scale = Vector2(1.5, 1.5)
text = "That key already exists
  Choose another key"

[node name="BackButton" type="TextureButton" parent="."]
texture_filter = 1
layout_mode = 0
offset_left = 1217.0
offset_top = 852.0
offset_right = 1258.0
offset_bottom = 863.0
scale = Vector2(7, 7)
focus_neighbor_left = NodePath("../Panel/ButtonContainer/ControlsButton")
focus_neighbor_right = NodePath("../Panel/ButtonContainer/GeneralButton")
focus_neighbor_bottom = NodePath("../BackgroundImage2/TextureButton")
texture_normal = ExtResource("15_evgs7")
texture_pressed = ExtResource("16_ayjmq")
texture_hover = ExtResource("17_8ecwu")
texture_focused = ExtResource("17_8ecwu")

[node name="Back" type="Label" parent="BackButton"]
layout_mode = 0
offset_left = 12.4
offset_top = 2.429
offset_right = 216.4
offset_bottom = 85.429
scale = Vector2(0.09, 0.09)
text = "BACK"
label_settings = SubResource("LabelSettings_gsrir")

[connection signal="animation_looped" from="BackgroundImage2/Justin" to="BackgroundImage2" method="_on_justin_animation_looped"]
[connection signal="pressed" from="Panel/ButtonContainer/GeneralButton" to="." method="_on_general_button_pressed"]
[connection signal="pressed" from="Panel/ButtonContainer/AudioButton" to="." method="_on_audio_button_pressed"]
[connection signal="pressed" from="Panel/ButtonContainer/ControlsButton" to="." method="_on_controls_button_pressed"]
[connection signal="pressed" from="Panel/ButtonContainer1/EasyModeButton" to="." method="_on_easy_mode_button_pressed"]
[connection signal="pressed" from="Panel/ButtonContainer1/NormalModeButton" to="." method="_on_normal_mode_button_pressed"]
[connection signal="pressed" from="Panel/ButtonContainer1/HardModeButton" to="." method="_on_hard_mode_button_pressed"]
[connection signal="pressed" from="Panel/General/HBoxContainer1/FullscreenButton" to="." method="_on_fullscreen_button_pressed"]
[connection signal="pressed" from="Panel/General/HBoxContainer2/BorderlessButton" to="." method="_on_borderless_button_pressed"]
[connection signal="pressed" from="BackButton" to="." method="_on_back_button_pressed"]
